# cmake-tutorial

./: CMakeLists.txt  Makefile  README.md  build.sh  main2.c  main3.c  simple_print_hello_world.c
cmake-modules/: CodeCoverage.cmake
get_speect/: get_speect.sh
include/: print_hello_world.h  simple_print_hello_world.h
libphw2/: CMakeLists.txt  print_hello_world.c
libphw2/include/: print_hello_world_defines.h
toolchains/: Toolchain-mingw32.cmake
